Bug/account page (#194)
* 404 page text overlapping removed

* 404 page text overlapping removed

--- a/scss/sections/header.scss
+++ b/scss/sections/header.scss
@@ -957,3 +957,8 @@ body .uwy .uai img {
     width: 100%;
     max-width: 272px;
 }
+
+#boost-pfs-search-box-2+.form__floating-label{
+    -webkit-transform: translateY(-6px) scale(.8);
+    transform: translateY(-6px) scale(.8);
+}
